# cpp-language-hacks

./: .gitignore  README.md
cpp-23-features/: CMakeLists.txt  build.sh  main.cpp
cpp-23-features/include/: call-println.cpp  call-println.hpp  expected.hpp  print.hpp  use-expected-hpp.cpp  use-expected-hpp.hpp  use-print-hpp.cpp  use-print-hpp.hpp
cpp-23-features/src/: expected.cpp  main.cpp  print.cpp
show-cpp-version/: CMakeLists.txt  build.sh  main.cpp
show-cpp-version/src/: main.cpp
